chore: rename packages

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,16 +1,11 @@
 {
-  "name": "@traderjoe-xyz/sdk-core",
+  "name": "@sovryn/joe-core",
   "version": "2.0.2",
   "license": "MIT",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
     "dist"
-  ],
-  "repository": "https://github.com/traderjoe-xyz/joe-sdks",
-  "keywords": [
-    "traderjoe-xyz",
-    "avalanche"
   ],
   "module": "dist/index.js",
   "scripts": {
