--- a/packages/v1/package.json
+++ b/packages/v1/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@traderjoe-xyz/sdk",
+  "name": "@sovryn/joe-sdk",
   "license": "MIT",
   "version": "5.0.2",
   "description": "🛠 An SDK for building applications on top of Trader Joe.",
@@ -7,11 +7,6 @@
   "types": "dist/index.d.ts",
   "files": [
     "dist"
-  ],
-  "repository": "https://github.com/traderjoe-xyz/joe-sdks",
-  "keywords": [
-    "traderjoe-xyz",
-    "avalanche"
   ],
   "module": "dist/index.js",
   "scripts": {
@@ -22,7 +17,7 @@
     "clean": "rm -rf .turbo && rm -rf node_modules && rm -rf dist"
   },
   "dependencies": {
-    "@traderjoe-xyz/sdk-core": "workspace:^",
+    "@sovryn/joe-core": "workspace:^",
     "big.js": "^6.2.1",
     "decimal.js-light": "^2.5.0",
     "jsbi": "^4.3.0",
