--- a/packages/v2/package.json
+++ b/packages/v2/package.json
@@ -1,16 +1,11 @@
 {
-  "name": "@traderjoe-xyz/sdk-v2",
+  "name": "@sovryn/joe-sdk-v2",
   "license": "MIT",
   "version": "3.0.11",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
     "dist"
-  ],
-  "repository": "https://github.com/traderjoe-xyz/joe-sdks",
-  "keywords": [
-    "traderjoe-xyz",
-    "avalanche"
   ],
   "module": "dist/index.js",
   "scripts": {
@@ -21,7 +16,7 @@
     "clean": "rm -rf .turbo && rm -rf node_modules && rm -rf dist"
   },
   "dependencies": {
-    "@traderjoe-xyz/sdk-core": "workspace:^",
+    "@sovryn/joe-core": "workspace:^",
     "big.js": "^6.2.1",
     "jsbi": "^4.3.0",
     "lodash.flatmap": "^4.5.0",
